--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Voice note</title>
     <!-- Łączenie zewnętrznego arkusza stylów -->
-   <link rel="stylesheet" href="CSS/styles.css">
+   <link rel="stylesheet" href="styles.css">
 
     <!-- Konfiguracja Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-app.js"></script>
