--- a/index.html
+++ b/index.html
@@ -7,19 +7,7 @@
    <link rel="stylesheet" href="styles.css">
 
     <!-- Konfiguracja Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.2/firebase-analytics.js"></script>
-
-    <script>
-        // Konfiguracja Firebase
-        const firebaseConfig = {
-            // ...
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-    </script>
+ <script src="firebase-init.js" defer></script>
 </head>
 <body>
     <div class="glass-effect">
