--- a/register.html
+++ b/register.html
@@ -13,11 +13,51 @@
             <form>
                 <input type="email" id="email" placeholder="Adres email"><br>
                 <input type="password" id="password" placeholder="Hasło"><br>
-                <!-- Zaimportuj i wywołaj funkcję z pliku register.js -->
-                <script type="module" src="register.js"></script>
                 <button type="button" onclick="signUp()">Zarejestruj się</button>
             </form>
         </div>
     </div>
+
+    <!-- Skrypty Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js"></script>
+
+    <script>
+        // Konfiguracja Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyBQW6kdrp20c5D84l6CnTo93CILDspLGa0",
+            authDomain: "voice-note-33ed8.firebaseapp.com",
+            projectId: "voice-note-33ed8",
+            storageBucket: "voice-note-33ed8.appspot.com",
+            messagingSenderId: "458791587254",
+            appId: "1:458791587254:web:e6ee23dc49ba2b17f28517",
+            measurementId: "G-89M7L25EE7"
+        };
+
+        // Inicjalizacja Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const analytics = firebase.analytics();
+        const auth = firebase.auth();
+
+        // Funkcja rejestracji użytkownika
+        function signUp() {
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+
+            auth.createUserWithEmailAndPassword(email, password)
+                .then((userCredential) => {
+                    const user = userCredential.user;
+                    console.log("Użytkownik zarejestrowany:", user);
+                    alert("Użytkownik zarejestrowany!");
+                })
+                .catch((error) => {
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    console.error("Błąd rejestracji:", errorMessage);
+                    alert("Błąd rejestracji: " + errorMessage);
+                });
+        }
+    </script>
 </body>
 </html>
