--- a/register.html
+++ b/register.html
@@ -3,61 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Rejestracja</title>
-    <!-- Łączenie zewnętrznego arkusza stylów -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="glass-effect">
         <div class="title">Rejestracja</div>
         <div class="registration-form">
-            <form>
+            <form id="registrationForm">
                 <input type="email" id="email" placeholder="Adres email"><br>
                 <input type="password" id="password" placeholder="Hasło"><br>
-                <button type="button" onclick="signUp()">Zarejestruj się</button>
+                <button type="submit">Zarejestruj się</button>
             </form>
         </div>
     </div>
 
-    <!-- Skrypty Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js"></script>
-
-    <script>
-        // Konfiguracja Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyBQW6kdrp20c5D84l6CnTo93CILDspLGa0",
-            authDomain: "voice-note-33ed8.firebaseapp.com",
-            projectId: "voice-note-33ed8",
-            storageBucket: "voice-note-33ed8.appspot.com",
-            messagingSenderId: "458791587254",
-            appId: "1:458791587254:web:e6ee23dc49ba2b17f28517",
-            measurementId: "G-89M7L25EE7"
-        };
-
-        // Inicjalizacja Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const analytics = firebase.analytics();
-        const auth = firebase.auth();
-
-        // Funkcja rejestracji użytkownika
-        function signUp() {
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-
-            auth.createUserWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    console.log("Użytkownik zarejestrowany:", user);
-                    alert("Użytkownik zarejestrowany!");
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorMessage = error.message;
-                    console.error("Błąd rejestracji:", errorMessage);
-                    alert("Błąd rejestracji: " + errorMessage);
-                });
-        }
-    </script>
+    <script src="register.js" defer></script>
 </body>
 </html>
