--- a/register.html
+++ b/register.html
@@ -12,9 +12,10 @@
             <form id="registrationForm">
                 <input type="email" id="email" placeholder="Adres email"><br>
                 <input type="password" id="password" placeholder="Hasło"><br>
-                <button type="submit">Zarejestruj się</button>
+                <button type="submit" class="button register">Zarejestruj się</button>
             </form>
         </div>
+        <a href="index.html" class="button login">Powrót do strony głównej</a>
     </div>
 
     <script src="register.js" defer></script>
